<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameDetailsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="417dp"
                android:layout_height="59dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="7dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|left"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo"
                    tools:src="@drawable/logo"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Home" />

                <Button
                    android:id="@+id/details_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Details" />
            </LinearLayout>

            <TextView
                android:id="@+id/game_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GAME TITLE"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/cover_imageview"
                android:layout_width="match_parent"
                android:layout_height="219dp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/game_details_platform_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/platform_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_release_date_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_esrb_rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/esrb_rating_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_developer_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/developer_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_publisher_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/publisher_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_genre_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genre_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_description_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_textview"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:text="TextView" />

                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_details_user_impression_recyclerview"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>