...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/search_query_edittext"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:hint="search"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@id/sort_button"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sort_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_list"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

...
